<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".WeatherActivity">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back" />

    <TextView
        android:id="@+id/current_date_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="1900-01-01"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/city_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CityName"
        android:textStyle="italic"
        android:textSize="23sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Weather"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/weather_Dscp_tv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Weather Description"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Temperature"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/temperature_tv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="99"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Humidity"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/humidity_tv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="99"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Wind Speed"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/wind_tv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="99"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </LinearLayout>


</LinearLayout>