...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="City Name" />

            <EditText
                android:id="@+id/cityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="City Name"
                android:inputType="textPersonName" />
        </LinearLayout>
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Latitude" />

            <EditText
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Latitude"
                android:inputType="numberDecimal|numberSigned" />
        </LinearLayout>
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Longitude" />

            <EditText
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Longitude"
                android:inputType="numberDecimal|numberSigned" />

        </LinearLayout>

        <Button
            android:id="@+id/createCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create City" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
