...
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="CS427 Project App" />

        <LinearLayout
            android:id="@+id/removeCitiesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

        <Button
            android:id="@+id/removeCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Update My Cities" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
