...
        <Button
            android:id="@+id/mapButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Show Map" />
        <Button
            android:id="@+id/weatherButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Show Weather"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
